--- a/roles/podman_init/tasks/set_subids.yml
+++ b/roles/podman_init/tasks/set_subids.yml
@@ -7,7 +7,8 @@
       - -E
       - '^{{ podman_user.username }}:.*$'
       - /etc/subuid
-  ignore_errors: true
+  changed_when: false
+  failed_when: grep_subuid.rc != 0 and grep_subuid.rc != 1
   register: grep_subuid
 
 - name: Configure subuid and subgid
