--- a/roles/mikeandwan_us/tasks/main.yml
+++ b/roles/mikeandwan_us/tasks/main.yml
@@ -20,17 +20,17 @@
       - "{{ mawus_config.asset_dir_images }}"
       - "{{ mawus_config.asset_dir_movies }}"
 
-- name: "Temporarily set SSH username to {{ mawus_svc_account }}"
+- name: "Temporarily set SSH username to {{ mawus_config.service_account.username }}"
   ansible.builtin.set_fact:
     orig_ansible_user: "{{ ansible_user }}"
-    ansible_user: "{{ mawus_svc_account }}"
-  when: mawus_config.env != 'local'
+    ansible_user: "{{ mawus_config.service_account.username }}"
+  when: mawus_config.env != 'dev'
   changed_when: false
   delegate_to: localhost
 
 - name: Include maw_admin_scripts.yml
   ansible.builtin.include_tasks: maw_admin_scripts.yml
-  when: mawus_config.env != 'local'
+  when: mawus_config.env != 'dev'
 
 - name: Include maw_env_files.yml
   ansible.builtin.include_tasks: maw_env_files.yml
@@ -50,6 +50,6 @@
 - name: "Reset SSH username to {{ orig_ansible_user }}"
   ansible.builtin.set_fact:
     ansible_user: "{{ orig_ansible_user }}"
-  when: mawus_config.env != 'local'
+  when: mawus_config.env != 'dev'
   changed_when: false
   delegate_to: localhost
