--- a/roles/mikeandwan_us/tasks/maw_init.yml
+++ b/roles/mikeandwan_us/tasks/maw_init.yml
@@ -2,12 +2,12 @@
 - name: set the volume source (local / non-container)
   ansible.builtin.set_fact:
     cert_vol: "{{ mawus_config.certs_dir }}"
-  when: mawus_config.env == 'local'
+  when: mawus_config.env == 'dev'
 
 - name: set the volume source (not local - container)
   ansible.builtin.set_fact:
     cert_vol: "{{ maw_cert_volume.volume.Name }}"
-  when: mawus_config.env != 'local'
+  when: mawus_config.env != 'dev'
 
 - name: set cert fqdn prefix
   ansible.builtin.set_fact:
@@ -45,14 +45,14 @@
 - name: Add ca cert(s) to trusted sources
   become: true
   ansible.builtin.copy:
-    dest: "/usr/share/pki/ca-trust-source/anchors/maw_local_{{ item | basename }}"
+    dest: "/usr/share/pki/ca-trust-source/anchors/maw_{{ mawus_config.env }}_{{ item | basename }}"
     src: "{{ item }}"
   with_fileglob:
     - "{{ mawus_config.certs_dir }}/ca/ca_*.crt"
-  when: mawus_config.env == 'local'
+  when: mawus_config.env == 'dev' or mawus_config.env == 'test'
 
 - name: Make the system aware of the new ca certs
   become: true
   ansible.builtin.command:
     cmd: update-ca-trust
-  when: mawus_config.env == 'local'
+  when: mawus_config.env == 'dev' or mawus_config.env == 'test'
