--- a/roles/mikeandwan_us/tasks/maw_pod.yml
+++ b/roles/mikeandwan_us/tasks/maw_pod.yml
@@ -302,7 +302,7 @@
       before: "container-{{ mawus_config.env }}-maw-api.service container-{{ mawus_config.env }}-maw-www.service"
     - unitfile: "container-{{ mawus_config.env }}-maw-www.service"
       before: "container-{{ mawus_config.env }}-maw-gateway.service"
-  when: mawus_config.env != 'local'
+  when: mawus_config.env != 'dev'
 
 - name: Start and/or Enable mawus via systemd
   ansible.builtin.systemd:
