--- a/roles/mikeandwan_us/tasks/solr_define_field.yml
+++ b/roles/mikeandwan_us/tasks/solr_define_field.yml
@@ -1,6 +1,7 @@
 - name: "check if solr field {{ item.name }} exists"
   ansible.builtin.command:
     cmd: "podman exec -it {{ solr_container.container.Name }} curl 'http://localhost:8983/solr/multimedia-categories/schema/fields/{{ item.name }}'"
+  changed_when: false
   register: solr_field_exists_result
 
 - name: "create field {{ item.name }}"
