add pg client tools to workstation

--- a/roles/fedora_workstation/tasks/main.yml
+++ b/roles/fedora_workstation/tasks/main.yml
@@ -74,6 +74,7 @@
       - nodejs
       - perl-Image-ExifTool
       - podman
+      - postgresql
       - python3-ansible-lint
       - rawtherapee
       - tmux
