--- a/roles/mikeandwan_us/tasks/maw_volumes.yml
+++ b/roles/mikeandwan_us/tasks/maw_volumes.yml
@@ -33,41 +33,42 @@
   containers.podman.podman_volume:
     name: "{{ mawus_config.env }}-maw-certs"
     state: present
-  when: mawus_config.env != 'dev'
+  when: mawus_config.certs_dir | length == 0
   register: maw_cert_volume
 
 - name: create auth dataprotection volume
   containers.podman.podman_volume:
     name: "{{ mawus_config.env }}-maw-auth-dataprotection"
     state: present
-  when: mawus_config.env != 'dev'
+  when: mawus_config.dataprotection_dir | length == 0
   register: auth_dataprotection_volume
 
 - name: create api dataprotection volume
   containers.podman.podman_volume:
     name: "{{ mawus_config.env }}-maw-api-dataprotection"
     state: present
-  when: mawus_config.env != 'dev'
+  when: mawus_config.dataprotection_dir | length == 0
   register: api_dataprotection_volume
 
 - name: create uploads volume
   containers.podman.podman_volume:
     name: "{{ mawus_config.env }}-maw-uploads"
     state: present
+  when: mawus_config.upload_dir | length == 0
   register: uploads_volume
 
 - name: create www dataprotection volume
   containers.podman.podman_volume:
     name: "{{ mawus_config.env }}-maw-www-dataprotection"
     state: present
-  when: mawus_config.env != 'dev'
+  when: mawus_config.dataprotection_dir | length == 0
   register: www_dataprotection_volume
 
 - name: create maw-google-creds volume
   containers.podman.podman_volume:
     name: "{{ mawus_config.env }}-maw-google-creds"
     state: present
-  when: mawus_config.env != 'dev'
+  when: mawus_config.google_email_creds_dir | length == 0
   register: google_creds_volume
 
 - name: create maw-gdrive-creds volume
