--- a/inventories/group_vars/mawus_test.yml
+++ b/inventories/group_vars/mawus_test.yml
@@ -35,11 +35,6 @@ mawus_config_test:
   pfx_www: "/certs/www/www.pfx"
 
   allow_low_ports: no
-  port_api: 5001
-  port_auth: 5011
-  port_photos: 4200
-  port_files: 4300
-  port_www: 5021
 
   # certs written to dir to simplify adding ca cert to host
   certs_dir: "{{ external_site_dir }}/certs"
@@ -67,20 +62,11 @@ mawus_config_test:
   podman_image_auth: "localhost/maw-auth-test"
   podman_image_api: "localhost/maw-api-test"
   podman_image_www: "localhost/maw-www-test"
-  podman_image_gateway: ""
+  podman_image_gateway: "localhost/maw-gateway-test"
   podman_image_cache_sync: "docker.io/aerisg222/maw-cache-sync:latest"
   podman_publish_ports:
-    - 5001:5001
-    - 5011:5011
-    - 5021:5021
-    - 4200:4200
-    - 4300:4300
-
-  gateway_volumes:
-    #- "{{ maw_cert_volume.volume.Name }}:/maw-certs:ro,z"
-    #- "{{ asset_dir_root }}:/assets:ro"
-    #- "{{ certbot_validation_volume.volume.Name }}:/var/www/certbot:ro,z"
-    #- "{{ certbot_certs_volume.volume.Name }}:/etc/letsencrypt:ro,z"
+    - 8080:8080
+    - 8443:8443
 
   # postgres sql accounts for site
   sql_username: svc_www_maw
