--- a/roles/mikeandwan_us/tasks/maw_postgres_restore_db.yml
+++ b/roles/mikeandwan_us/tasks/maw_postgres_restore_db.yml
@@ -33,8 +33,10 @@
     state: started
     interactive: true
     rm: true
+    security_opt:
+      - label=disable
     volume:
-      - "{{ pg_backup_dir }}:/postgres_backup:rw,Z"
+      - "{{ pg_backup_dir }}:/postgres_backup:ro"
   when: sql_test_result | int == 2
 
 - name: "wait for {{ db_name }} restore"
