address some lint issues

--- a/roles/sshd/tasks/main.yml
+++ b/roles/sshd/tasks/main.yml
@@ -12,17 +12,29 @@
   ansible.builtin.import_tasks: harden.yml
   vars:
     sshd_harden_items:
-      - { key: "PubkeyAuthentication", value: "yes" }  # should be on by default
-      - { key: "MaxAuthTries", value: "3" }
-      - { key: "LoginGraceTime", value: "10" }
-      - { key: "PermitRootLogin", value: "no" }
-      - { key: "PermitEmptyPasswords", value: "no" }
-      - { key: "ChallengeResponseAuthentication", value: "no" }
-      - { key: "KerberosAuthentication", value: "no" }
-      - { key: "GSSAPIAuthentication", value: "no" }
-      - { key: "PasswordAuthentication", value: "no" }
-      - { key: "KbdInteractiveAuthentication", value: "no" }
-      - { key: "HostbasedAuthentication", value: "no" }
-      - { key: "X11Forwarding", value: "no" }
+      - key: "PubkeyAuthentication"
+        value: "yes"
+      - key: "MaxAuthTries"
+        value: "3"
+      - key: "LoginGraceTime"
+        value: "10"
+      - key: "PermitRootLogin"
+        value: "no"
+      - key: "PermitEmptyPasswords"
+        value: "no"
+      - key: "ChallengeResponseAuthentication"
+        value: "no"
+      - key: "KerberosAuthentication"
+        value: "no"
+      - key: "GSSAPIAuthentication"
+        value: "no"
+      - key: "PasswordAuthentication"
+        value: "no"
+      - key: "KbdInteractiveAuthentication"
+        value: "no"
+      - key: "HostbasedAuthentication"
+        value: "no"
+      - key: "X11Forwarding"
+        value: "no"
   notify:
     - "reload_sshd"
