--- a/roles/fedora_base/tasks/os.yml
+++ b/roles/fedora_base/tasks/os.yml
@@ -26,73 +26,107 @@
     state: present
   loop:
     # Avoid a smurf attack
-    - { key: "net.ipv4.icmp_echo_ignore_broadcasts", value: "1" }
+    - key: "net.ipv4.icmp_echo_ignore_broadcasts"
+      value: "1"
 
     # Turn on protection for bad icmp error messages
-    - { key: "net.ipv4.icmp_ignore_bogus_error_responses", value: "1" }
+    - key: "net.ipv4.icmp_ignore_bogus_error_responses"
+      value: "1"
 
     # Turn on syncookies for SYN flood attack protection
-    - { key: "net.ipv4.tcp_syncookies", value: "1" }
+    - key: "net.ipv4.tcp_syncookies"
+      value: "1"
 
     # Turn on and log spoofed, source routed, and redirect packets
-    - { key: "net.ipv4.conf.all.log_martians", value: "1" }
-    - { key: "net.ipv4.conf.default.log_martians", value: "1" }
+    - key: "net.ipv4.conf.all.log_martians"
+      value: "1"
+    - key: "net.ipv4.conf.default.log_martians"
+      value: "1"
 
     # No source routed packets here
-    - { key: "net.ipv4.conf.all.accept_source_route", value: "0" }
-    - { key: "net.ipv4.conf.default.accept_source_route", value: "0" }
+    - key: "net.ipv4.conf.all.accept_source_route"
+      value: "0"
+    - key: "net.ipv4.conf.default.accept_source_route"
+      value: "0"
 
     # Turn on reverse path filtering
-    - { key: "net.ipv4.conf.all.rp_filter", value: "1" }
-    - { key: "net.ipv4.conf.default.rp_filter", value: "1" }
+    - key: "net.ipv4.conf.all.rp_filter"
+      value: "1"
+    - key: "net.ipv4.conf.default.rp_filter"
+      value: "1"
 
     # Make sure no one can alter the routing tables
-    - { key: "net.ipv4.conf.all.accept_redirects", value: "0" }
-    - { key: "net.ipv4.conf.default.accept_redirects", value: "0" }
-    - { key: "net.ipv4.conf.all.secure_redirects", value: "0" }
-    - { key: "net.ipv4.conf.default.secure_redirects", value: "0" }
+    - key: "net.ipv4.conf.all.accept_redirects"
+      value: "0"
+    - key: "net.ipv4.conf.default.accept_redirects"
+      value: "0"
+    - key: "net.ipv4.conf.all.secure_redirects"
+      value: "0"
+    - key: "net.ipv4.conf.default.secure_redirects"
+      value: "0"
 
     # Don't act as a router
-    - { key: "net.ipv4.ip_forward", value: "0" }
-    - { key: "net.ipv4.conf.all.send_redirects", value: "0" }
-    - { key: "net.ipv4.conf.default.send_redirects", value: "0" }
+    - key: "net.ipv4.ip_forward"
+      value: "0"
+    - key: "net.ipv4.conf.all.send_redirects"
+      value: "0"
+    - key: "net.ipv4.conf.default.send_redirects"
+      value: "0"
 
     # Turn on execshield
-    # - { key: "kernel.exec-shield", value: "1" }  no longer settable by sysctl - on by default
-    - { key: "kernel.randomize_va_space", value: "1" }
+    - key: "kernel.randomize_va_space"
+      value: "1"
 
     # Tune IPv6
-    - { key: "net.ipv6.conf.default.router_solicitations", value: "0" }
-    - { key: "net.ipv6.conf.default.accept_ra_rtr_pref", value: "0" }
-    - { key: "net.ipv6.conf.default.accept_ra_pinfo", value: "0" }
-    - { key: "net.ipv6.conf.default.accept_ra_defrtr", value: "0" }
-    - { key: "net.ipv6.conf.default.autoconf", value: "0" }
-    - { key: "net.ipv6.conf.default.dad_transmits", value: "0" }
-    - { key: "net.ipv6.conf.default.max_addresses", value: "1" }
+    - key: "net.ipv6.conf.default.router_solicitations"
+      value: "0"
+    - key: "net.ipv6.conf.default.accept_ra_rtr_pref"
+      value: "0"
+    - key: "net.ipv6.conf.default.accept_ra_pinfo"
+      value: "0"
+    - key: "net.ipv6.conf.default.accept_ra_defrtr"
+      value: "0"
+    - key: "net.ipv6.conf.default.autoconf"
+      value: "0"
+    - key: "net.ipv6.conf.default.dad_transmits"
+      value: "0"
+    - key: "net.ipv6.conf.default.max_addresses"
+      value: "1"
 
     # Optimization for port usefor LBs
     # Increase system file descriptor limit
-    - { key: "fs.file-max", value: "65535" }
+    - key: "fs.file-max"
+      value: "65535"
 
     # Allow for more PIDs (to reduce rollover problems); may break some programs 32768
-    - { key: "kernel.pid_max", value: "65535" }
+    - key: "kernel.pid_max"
+      value: "65535"
 
     # Increase system IP port limits
-    - { key: "net.ipv4.ip_local_port_range", value: "2000 65000" }
+    - key: "net.ipv4.ip_local_port_range"
+      value: "2000 65000"
 
     # Increase TCP max buffer size setable using setsockopt()
-    - { key: "net.ipv4.tcp_rmem", value: "4096 87380 8388608" }
-    - { key: "net.ipv4.tcp_wmem", value: "4096 87380 8388608" }
+    - key: "net.ipv4.tcp_rmem"
+      value: "4096 87380 8388608"
+    - key: "net.ipv4.tcp_wmem"
+      value: "4096 87380 8388608"
 
     # Increase Linux auto tuning TCP buffer limits
     # min, default, and max number of bytes to use
     # set max to at least 4MB, or higher if you use very high BDP paths
     # Tcp Windows etc
-    - { key: "net.core.rmem_max", value: "8388608" }
-    - { key: "net.core.wmem_max", value: "8388608" }
-    - { key: "net.core.netdev_max_backlog", value: "5000" }
-    - { key: "net.ipv4.tcp_window_scaling", value: "1" }
+    - key: "net.core.rmem_max"
+      value: "8388608"
+    - key: "net.core.wmem_max"
+      value: "8388608"
+    - key: "net.core.netdev_max_backlog"
+      value: "5000"
+    - key: "net.ipv4.tcp_window_scaling"
+      value: "1"
 
     # Congestion control
-    - { key: "net.core.default_qdisc", value: "fq_codel" }
-    - { key: "net.ipv4.tcp_congestion_control", value: "bbr" }
+    - key: "net.core.default_qdisc"
+      value: "fq_codel"
+    - key: "net.ipv4.tcp_congestion_control"
+      value: "bbr"
