--- a/roles/fedora_workstation/tasks/main.yml
+++ b/roles/fedora_workstation/tasks/main.yml
@@ -95,4 +95,5 @@
     value: "{{ item.value }}"
     state: present
   loop:
-    - { key: "fs.inotify.max_user_instances", value: "1024" }
+    - key: "fs.inotify.max_user_instances"
+      value: "1024"
