update to reflect changes to dir structure

--- a/inventories/host_vars/vmtest.yml
+++ b/inventories/host_vars/vmtest.yml
@@ -6,7 +6,7 @@ ansible_user: mmorano
 hostname: vmtest
 update_packages: no
 
-external_vars_root: "{{ lookup('env', 'HOME') }}/ansible/{{ hostname }}"
+external_vars_root: "{{ lookup('env', 'HOME') }}/ansible/hosts/{{ hostname }}"
 ddclient_secrets_file: "{{ external_vars_root }}/ddclient_secrets.yml"
 
 # ddclient
